{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 27,
  "lineage": "46d34c28-c502-4d85-ae37-4dcdd4ebf7d9",
  "resources": [
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_linux_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:067408557023:instance/i-038f62f378919ad79",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038f62f378919ad79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8a5fa11c1e8f2dd",
            "private_dns": "ip-10-0-1-5.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:067408557023:key/60a72730-ae01-4c2e-933b-7e3db15312c6",
                "tags": {
                  "Name": "ec2_linux_01_vol"
                },
                "tags_all": {
                  "Name": "ec2_linux_01_vol"
                },
                "throughput": 125,
                "volume_id": "vol-0d711bc84604a05a1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2506ff2d87a3d06",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001e19d87d499a88a"
            ]
          },
          "dependencies": [
            "module.security_apec1.aws_security_group.linux_security_group",
            "module.security_apec1.aws_subnet.private_app_subnet_az1",
            "module.security_apec1.aws_vpc.project-vpc_demo",
            "module.security_apec1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_linux_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:067408557023:instance/i-0844aa57d79042026",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0844aa57d79042026",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7be2c258b5def58",
            "private_dns": "ip-10-0-2-5.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:067408557023:key/60a72730-ae01-4c2e-933b-7e3db15312c6",
                "tags": {
                  "Name": "ec2_linux_02_vol"
                },
                "tags_all": {
                  "Name": "ec2_linux_02_vol"
                },
                "throughput": 125,
                "volume_id": "vol-0041b802aa468884a",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ebc1bdfb9f009fa",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001e19d87d499a88a"
            ]
          },
          "dependencies": [
            "module.security_apec1.aws_security_group.linux_security_group",
            "module.security_apec1.aws_subnet.private_app_subnet_az2",
            "module.security_apec1.aws_vpc.project-vpc_demo",
            "module.security_apec1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_linux_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:067408557023:instance/i-01256130c7ccfc9aa",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01256130c7ccfc9aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d644dcc814ecf3d1",
            "private_dns": "ip-10-0-1-6.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:067408557023:key/60a72730-ae01-4c2e-933b-7e3db15312c6",
                "tags": {
                  "Name": "ec2_linux_03_vol"
                },
                "tags_all": {
                  "Name": "ec2_linux_03_vol"
                },
                "throughput": 125,
                "volume_id": "vol-08cf28ec273ad5a62",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2506ff2d87a3d06",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001e19d87d499a88a"
            ]
          },
          "dependencies": [
            "module.security_apec1.aws_security_group.linux_security_group",
            "module.security_apec1.aws_subnet.private_app_subnet_az1"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067408557023:security-group/sg-001e19d87d499a88a",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001e19d87d499a88a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "linux-security-group",
            "name_prefix": "",
            "owner_id": "067408557023",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "prod-linux"
            },
            "tags_all": {
              "name": "prod-linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59efc168b2700d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "win_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067408557023:security-group/sg-085020ddb9813226a",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085020ddb9813226a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "win-security-group",
            "name_prefix": "",
            "owner_id": "067408557023",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "prod-Windows"
            },
            "tags_all": {
              "name": "prod-Windows"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b59efc168b2700d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_linux-eg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "any outbound",
            "from_port": 0,
            "id": "sgrule-269415740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-001e19d87d499a88a",
            "security_group_rule_id": "sgr-0ceff3429083aa2a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_security_group.linux_security_group",
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_linux-ing-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": 8,
            "id": "sgrule-1032968971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-001e19d87d499a88a",
            "security_group_rule_id": "sgr-0a87860010c556f02",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_security_group.linux_security_group",
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_win-eg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "any outbound",
            "from_port": 0,
            "id": "sgrule-188699909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085020ddb9813226a",
            "security_group_rule_id": "sgr-0cf647b7744abf2c3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_security_group.win_security_group",
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_win-ing-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": 8,
            "id": "sgrule-609646538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-085020ddb9813226a",
            "security_group_rule_id": "sgr-012eaddd6aa5b0ba8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_apec1.aws_security_group.win_security_group",
            "module.security_apec1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067408557023:subnet/subnet-0a2506ff2d87a3d06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2506ff2d87a3d06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067408557023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az1"
            },
            "tags_all": {
              "Name": "private_app_subnet_az1"
            },
            "vpc_id": "vpc-0b59efc168b2700d5"
          },
          "dependencies": [
            "module.security_apec1.aws_vpc.project-vpc_demo",
            "module.security_apec1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067408557023:subnet/subnet-00ebc1bdfb9f009fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ebc1bdfb9f009fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067408557023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az2"
            },
            "tags_all": {
              "Name": "private_app_subnet_az2"
            },
            "vpc_id": "vpc-0b59efc168b2700d5"
          },
          "dependencies": [
            "module.security_apec1.aws_vpc.project-vpc_demo",
            "module.security_apec1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_apec1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].apec1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:067408557023:vpc/vpc-0b59efc168b2700d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e27648a5c576be7",
            "default_route_table_id": "rtb-0fc0fc2b2285693e3",
            "default_security_group_id": "sg-0126a45b89d66754f",
            "dhcp_options_id": "dopt-0b902b4abc9bde940",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b59efc168b2700d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc0fc2b2285693e3",
            "owner_id": "067408557023",
            "tags": {
              "Name": "lsg-vpc"
            },
            "tags_all": {
              "Name": "lsg-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_linux_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebfd941bbafe70c6",
            "arn": "arn:aws:ec2:us-east-1:067408557023:instance/i-0a37e0698aecbfc7d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a37e0698aecbfc7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037e0e2ce7c1b2a63",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:067408557023:key/a4018dbe-619d-4133-a876-a6a3c7c3a422",
                "tags": {
                  "Name": "ec2_linux_01_vol"
                },
                "tags_all": {
                  "Name": "ec2_linux_01_vol"
                },
                "throughput": 125,
                "volume_id": "vol-04a5cedd2706e812e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d37fe1d923a0992",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077bbafe515407088"
            ]
          },
          "dependencies": [
            "module.security_use1.aws_security_group.linux_security_group",
            "module.security_use1.aws_subnet.private_app_subnet_az1",
            "module.security_use1.aws_vpc.project-vpc_demo",
            "module.security_use1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_linux_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebfd941bbafe70c6",
            "arn": "arn:aws:ec2:us-east-1:067408557023:instance/i-0217a8a26119c69c7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0217a8a26119c69c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mytest",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-035e2ba29f5459974",
            "private_dns": "ip-10-0-2-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:067408557023:key/a4018dbe-619d-4133-a876-a6a3c7c3a422",
                "tags": {
                  "Name": "ec2_linux_02_vol"
                },
                "tags_all": {
                  "Name": "ec2_linux_02_vol"
                },
                "throughput": 125,
                "volume_id": "vol-046700105ec09cb5a",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a7cbccfef1720be",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077bbafe515407088"
            ]
          },
          "dependencies": [
            "module.security_use1.aws_security_group.linux_security_group",
            "module.security_use1.aws_subnet.private_app_subnet_az2",
            "module.security_use1.aws_vpc.project-vpc_demo",
            "module.security_use1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "linux_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067408557023:security-group/sg-077bbafe515407088",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077bbafe515407088",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "linux-security-group",
            "name_prefix": "",
            "owner_id": "067408557023",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "prod-linux"
            },
            "tags_all": {
              "name": "prod-linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-0175314134da5f58c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "win_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067408557023:security-group/sg-0c9a9bfe1a0d0c22d",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9a9bfe1a0d0c22d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "win-security-group",
            "name_prefix": "",
            "owner_id": "067408557023",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "prod-Windows"
            },
            "tags_all": {
              "name": "prod-Windows"
            },
            "timeouts": null,
            "vpc_id": "vpc-0175314134da5f58c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_linux-eg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "any outbound",
            "from_port": 0,
            "id": "sgrule-1703385492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077bbafe515407088",
            "security_group_rule_id": "sgr-0d6dbb33fc0fddeeb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_security_group.linux_security_group",
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_linux-ing-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": 8,
            "id": "sgrule-996621993",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-077bbafe515407088",
            "security_group_rule_id": "sgr-0a496738554bba7e4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_security_group.linux_security_group",
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_win-eg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "any outbound",
            "from_port": 0,
            "id": "sgrule-583036296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c9a9bfe1a0d0c22d",
            "security_group_rule_id": "sgr-0f9c3b27bff730b4b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_security_group.win_security_group",
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_win-ing-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ICMP",
            "from_port": 8,
            "id": "sgrule-1570670429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0c9a9bfe1a0d0c22d",
            "security_group_rule_id": "sgr-0bcf265ab24990068",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_use1.aws_security_group.win_security_group",
            "module.security_use1.aws_vpc.project-vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067408557023:subnet/subnet-06d37fe1d923a0992",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d37fe1d923a0992",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067408557023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az1"
            },
            "tags_all": {
              "Name": "private_app_subnet_az1"
            },
            "vpc_id": "vpc-0175314134da5f58c"
          },
          "dependencies": [
            "module.security_use1.aws_vpc.project-vpc_demo",
            "module.security_use1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067408557023:subnet/subnet-08a7cbccfef1720be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a7cbccfef1720be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067408557023",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_app_subnet_az2"
            },
            "tags_all": {
              "Name": "private_app_subnet_az2"
            },
            "vpc_id": "vpc-0175314134da5f58c"
          },
          "dependencies": [
            "module.security_use1.aws_vpc.project-vpc_demo",
            "module.security_use1.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_use1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067408557023:vpc/vpc-0175314134da5f58c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c443d55ccd592ecb",
            "default_route_table_id": "rtb-0a19bc97d818e7f6b",
            "default_security_group_id": "sg-0d86c284881772c63",
            "dhcp_options_id": "dopt-0169d63e6e66f2cea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0175314134da5f58c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a19bc97d818e7f6b",
            "owner_id": "067408557023",
            "tags": {
              "Name": "lsg-vpc"
            },
            "tags_all": {
              "Name": "lsg-vpc"
            }
          }
        }
      ]
    }
  ]
}